# viazovska-fields-simulator

./: .gitignore  .gitmodules  README.md  pyproject.toml
computation/: e8_lattice.py  magic_functions.py  packing_density.py
notes/: 00-overview.md  01-e8-lattice.md  02-leech-lattice.md  03-modular-forms.md  04-magic-functions.md  05-proof-flow.md
visualizations/interactive/: app.py
visualizations/manim/: e8_roots.py  magic_function.py  sphere_packing.py
