[project]
name = "viazovska-fields-simulator"
version = "0.1.0"
description = "Visualizations and computations for Viazovska's Fields Medal sphere packing proof - E8 and Leech lattice"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "mpmath>=1.3",
    "manim>=0.18",
    "plotly>=5.18",
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
